[package]
name = "sentinel-lib"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared library for SentinelD common functionality"
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
# Core dependencies used by all components
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Async runtime
tokio.workspace = true

# Database
redb = "3.0.1"

# Serialization
serde_json = "1.0.145"
serde_yaml = "0.9.33"

# Date/time handling
chrono = { version = "0.4.42", features = ["serde"] }

# Async traits
async-trait = "0.1.89"

# Cryptographic hashing
blake3 = "1.8.2"

# Futures utilities
futures = "0.3.31"

# System information
sysinfo.workspace = true

# SQL parsing and validation
sqlparser = "0.58.0"

# Additional dependencies
tempfile = "3.22.0"

# UUID support
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
proptest = "1.7.0"
criterion = "0.7.0"

[package.metadata.cargo-machete]
ignored = ["anyhow", "tracing"]
