[package]
name = "sentinel-lib"
edition = "2024"
version = "0.1.0"
authors = ["UncleSp1d3r", "Krypdo3"]
license = "Apache-2.0"
rust-version = "1.85"
description = "Shared library for SentinelD common functionality"
repository = "https://github.com/EvilBit-Labs/SentinelD"
homepage = "https://evilbitlabs.io/sentineld"
publish = false

# Feature flags
[features]
default = ["process-collection", "detection-engine", "alerting"]

# Component features
process-collection = []
detection-engine = ["sqlparser"]
alerting = []
kernel-monitoring = []
network-correlation = []

[dependencies]
# Core dependencies used by all components
serde = { version = "1.0.225", features = ["derive"] }
tracing = "0.1.41"
thiserror = "2.0.16"
anyhow = "1.0.99"

# Async runtime
tokio = { version = "1.47.1", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
    "process",
    "macros",
    "sync",
    "fs",
    "signal",
] }

# Database
redb = "3.0.1"

# Serialization
serde_json = "1.0.145"
serde_yaml = "0.9.33"

# Date/time handling
chrono = { version = "0.4.42", features = ["serde"] }

# Async traits
async-trait = "0.1.89"

# Cryptographic hashing
blake3 = "1.8.2"

# Futures utilities
futures = "0.3.31"

# System information
sysinfo = "0.37.0"

# SQL parsing and validation
sqlparser = { version = "0.58.0", optional = true }

# Additional dependencies
tempfile = "3.22.0"

# UUID support
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
proptest = "1.7.0"
criterion = "0.7.0"

[package.metadata.cargo-machete]
ignored = ["anyhow", "tracing"]
