[package]
name = "sentinel-lib"
edition = "2024"
version = "0.1.0"
authors = ["UncleSp1d3r", "Krypdo3"]
license = "Apache-2.0"
rust-version = "1.85"
description = "Shared library for SentinelD common functionality"
repository = "https://github.com/EvilBit-Labs/SentinelD"
homepage = "https://evilbitlabs.io/sentineld"
publish = false

# Feature flags
[features]
default = ["process-collection", "detection-engine", "alerting", "ipc"]

# Component features
process-collection = []
detection-engine = ["sqlparser"]
alerting = []
kernel-monitoring = []
network-correlation = []

# IPC transport features
ipc = []                 # Default: use tokio native IPC transport
windows-pipe-strict = [] # Windows-only: use strict named pipe SDDL

[dependencies]
# Core dependencies used by all components
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Database
redb = { workspace = true }

# Serialization
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Date/time handling
chrono = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Cryptographic hashing
blake3 = { workspace = true }

# Futures utilities
futures = { workspace = true }

# System information
sysinfo = { workspace = true }

# SQL parsing and validation
sqlparser = { workspace = true, optional = true }

# Additional dependencies
tempfile = { workspace = true }

# UUID support
uuid = { workspace = true }

# Protocol Buffers support
prost = { workspace = true }
prost-types = { workspace = true }

# IPC communication
interprocess = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["anyhow", "tracing"]
