[package]
name = "sentinelagent"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Agent component for SentinelD."
publish = false

[dependencies]
sentinel-lib.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
