[package]
name = "sentinelagent"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Agent component for SentinelD"
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
# Shared library
sentinel-lib = { path = "../sentinel-lib" }

# Agent specific dependencies
tokio.workspace = true
sqlx.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

[[bin]]
name = "sentinelagent"
path = "src/main.rs"
